# osrs-random

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  missing_boss.md
.github/workflows/: release.yml
src/: main.rs
