[package]
name = "osrs-random"
version = "1.0.0"
edition = "2021"
authors = ["stackrot <dev@stackrot.dev>"]
description = "A random boss and skill generator for Old School RuneScape"
repository = "https://github.com/stackrot/osrs-random"
license = "MIT"

[dependencies]
rand = "0.8.5"
clap = { version = "3.2", features = ["derive"] }
prettytable-rs = "^0.10"
once_cell = "1.18.0"
crossterm = "0.26.1"
